ncc/testsuite/negative/fail-infer.n
using Nemerle.IO;

module M {
  f () : void {
    def f1 (x) { printf ("%s\n", x) };
    f1 (3); // E: call
    printf ("%d", f1 ("foo")); // E: type-enforced expression was expected to have type int while it has void
  }
}
